@@ -210,7 +210,7 @@
 					<!-- Copyright please don't remove-->
 						<STRONG><SPAN class='powered'>
 							Based on <a href='https://github.com/giaythuytinh176/vinaget-script'>Vinaget 2.7.0 Final Revision <?php printf($obj->current_version); ?></a> by [FZ]<br/>
-							Developed by LTT. Find me on <a target='_blank' href='https://github.com/ltt2801/new-vinaget-script'>GitHub</a>. Current version is <?php if ($obj->isAdmin()) printf($obj->ltt_version); ?>
+							Developed by LTT. Find me on <a target='_blank' href='https://github.com/ltt2801/new-vinaget-script'>GitHub</a><?php if ($obj->isAdmin()) printf(". Current version is " . $obj->ltt_version); ?>
 						</SPAN></STRONG><br/>
 						<SPAN class='copyright'>Copyright 2009-<?php echo date('Y');?> by <a href='http://vinaget.us/'>http://vinaget.us</a>. All rights reserved.</SPAN><br />
 					<!-- Copyright please don't remove-->
